--- a/news.html
+++ b/news.html
@@ -10,20 +10,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/x-icon" href="/sources/medias/ldl-icone.ico">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet"
-    href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css />
+    <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css />
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="disclaimer" id="disclaimer">
         <p>Ce site est un une refonte dans le contexte d'un projet étudiant.
             <strong><a href="https://liguedesdroits.ca/">Consulter le site original</a></strong>
-            
+
         </p>
         <i class="fa-solid fa-x fa-2x" id="disclaimer-close"></i>
     </div>
@@ -84,28 +84,47 @@
             </div>
         </div>
     </header>
-    <section class="news-wrapper"> 
+    <section class="news-wrapper">
         <div class="news-wrapper__news">
             <ul class="news-wrapper__list">
-                <li><p>Pinel: Les cas complexes crient au secours!</p></li>
-                <li><p>Pour l’interdiction des interpellations
-                    policières une bonne fois pour toute</p></li>
-                <li><p>États généraux de la fonction public du Québec</p></li>
-                <li><p>Le Canada doit stopper de façon urgente l’exportation 
-                    d’armes à destination d’Israël</p></li>
-                <li><p>Être en prison dans une prison</p></li>
-                <li><p>Les délais du regroupement familial au Québec : <br> Pourquoi sont-ils préjudiciables aux droits humains?</p></li>
-                    <li><p>Pour l’interdiction des interpellations
-                        policières une bonne fois pour toute</p></li>
-                    <li><p>Contre vents et marées : liens avec un proche incarcéré</p></li>
-                    <li><p>Le Canada doit stopper de façon urgente l’exportation 
-                        d’armes à destination d’Israël</p></li>
+                <li>
+                    <p>Pinel: Les cas complexes crient au secours!</p>
+                </li>
+                <li>
+                    <p>Pour l’interdiction des interpellations
+                        policières une bonne fois pour toute</p>
+                </li>
+                <li>
+                    <p>États généraux de la fonction public du Québec</p>
+                </li>
+                <li>
+                    <p>Le Canada doit stopper de façon urgente l’exportation
+                        d’armes à destination d’Israël</p>
+                </li>
+                <li>
+                    <p>Être en prison dans une prison</p>
+                </li>
+                <li>
+                    <p>Les délais du regroupement familial au Québec : <br> Pourquoi sont-ils préjudiciables aux droits
+                        humains?</p>
+                </li>
+                <li>
+                    <p>Pour l’interdiction des interpellations
+                        policières une bonne fois pour toute</p>
+                </li>
+                <li>
+                    <p>Contre vents et marées : liens avec un proche incarcéré</p>
+                </li>
+                <li>
+                    <p>Le Canada doit stopper de façon urgente l’exportation
+                        d’armes à destination d’Israël</p>
+                </li>
             </ul>
         </div>
 
     </section>
-     <!-- Footer -->
-     <footer>
+    <!-- Footer -->
+    <footer>
         <h1>LDL et nos Partenaires</h1>
         <div class="footer-wrapper__partner">
             <img src="sources/medias/partners/casifq.png" alt="casifq">
@@ -165,7 +184,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="swiper.js" ></script>
+    <script src="swiper.js"></script>
     <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
-    </body>
+</body>
