--- a/news.html
+++ b/news.html
@@ -34,7 +34,7 @@
                 <input type="text" placeholder="  RECHERCHER">
             </div>
 
-            <img class="logo" src="medias/ldl-logo-horizontale-270.png" alt="logoldl">
+            <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
 
             <div class="navbar-top__buttons">
                 <button class="cta-button secondary">S'INFORMER</button>
@@ -63,7 +63,7 @@
 
         <div class="mobile-menu-overlay">
             <div class="mobile-menu-content">
-                <img class="logo" src="medias/ldl-logo-horizontale-270.png" alt="logoldl">
+                <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
                 <div class="searchbar">
                     <i class="fa-solid fa-magnifying-glass fa-2x"></i>
                     <input type="text" placeholder="  RECHERCHER">
@@ -86,40 +86,7 @@
     </header>
     <section class="news-wrapper">
         <div class="news-wrapper__news">
-            <ul class="news-wrapper__list">
-                <li>
-                    <p>Pinel: Les cas complexes crient au secours!</p>
-                </li>
-                <li>
-                    <p>Pour l’interdiction des interpellations
-                        policières une bonne fois pour toute</p>
-                </li>
-                <li>
-                    <p>États généraux de la fonction public du Québec</p>
-                </li>
-                <li>
-                    <p>Le Canada doit stopper de façon urgente l’exportation
-                        d’armes à destination d’Israël</p>
-                </li>
-                <li>
-                    <p>Être en prison dans une prison</p>
-                </li>
-                <li>
-                    <p>Les délais du regroupement familial au Québec : <br> Pourquoi sont-ils préjudiciables aux droits
-                        humains?</p>
-                </li>
-                <li>
-                    <p>Pour l’interdiction des interpellations
-                        policières une bonne fois pour toute</p>
-                </li>
-                <li>
-                    <p>Contre vents et marées : liens avec un proche incarcéré</p>
-                </li>
-                <li>
-                    <p>Le Canada doit stopper de façon urgente l’exportation
-                        d’armes à destination d’Israël</p>
-                </li>
-            </ul>
+            
         </div>
         <ul class="news-wrapper__list">
             <li>
@@ -160,20 +127,20 @@
     <footer>
         <h1>LDL et nos Partenaires</h1>
         <div class="footer-wrapper__partner">
-            <img src="medias/partners/casifq.png" alt="casifq">
-            <img src="medias/partners/bdsquebec-logo-email.jpg">
-            <img src="medias/partners/coalitionaidejuridique.png">
-            <img src="medias/partners/fidh.jpg">
-            <img src="medias/partners/iclmg-csilc.jpg">
-            <img src="medias/partners/logo-echec-a-la-guerre-retin.png">
-            <img src="medias/partners/osp.png">
-            <img src="medias/partners/rodcd_logo.png">
-            <img src="medias/partners/rqaca.png">
+            <img src="sources/medias/partners/casifq.png" alt="casifq">
+            <img src="sources/medias/partners/bdsquebec-logo-email.jpg">
+            <img src="sources/medias/partners/coalitionaidejuridique.png">
+            <img src="sources/medias/partners/fidh.jpg">
+            <img src="sources/medias/partners/iclmg-csilc.jpg">
+            <img src="sources/medias/partners/logo-echec-a-la-guerre-retin.png">
+            <img src="sources/medias/partners/osp.png">
+            <img src="sources/medias/partners/rodcd_logo.png">
+            <img src="sources/medias/partners/rqaca.png">
         </div>
     </footer>
     <footer class="footer-wrapper">
         <div class="footer-wrapper__socialtree">
-            <img class="footer-wrapper__logo" src="medias/ldl-icone.png">
+            <img class="footer-wrapper__logo" src="/sources/medias/ldl-icone.png">
             <span class="text-logo" style="font-size: 30px; text-align: center">
                 <p>Ligue des <br> <b>Droits</b> et <b>libertés</b></p>
             </span>
